--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -227,13 +227,15 @@
             { "id": "168", "name": "Sidney Morley Kasner", "gender": "M", "spouse_ids": ["169"], "parent_ids": ["202", "203"], "children_ids": ["104", "106"], "birth_year": null, "death_year": null },
             { "id": "169", "name": "Elizabeth Margaret Dawyduk", "gender": "F", "spouse_id": "168", "children_ids": ["104", "106"], "birth_year": null, "death_year": null },
             { "id": "170", "name": "Bernard Melvin Kasner", "gender": "M", "parent_ids": ["202", "203"], "birth_year": null, "death_year": null },
-            { "id": "104", "name": "Deborah Lynn Kasner", "gender": "F","spouse_id":["105"] "parent_ids": ["168", "169"], "birth_year": null, "death_year": null },
-            { "id": "105", "name": "Pierette Boily", "gender": "F","spouse_id":["104"] "parent_ids": null, "birth_year": null, "death_year": null },
+            <!-- *** FIX 1 (ID 104) and FIX 2 (ID 105) - Missing comma and inconsistent spouse property fixed. *** -->
+            { "id": "104", "name": "Deborah Lynn Kasner", "gender": "F", "spouse_ids": ["105"], "parent_ids": ["168", "169"], "birth_year": null, "death_year": null },
+            { "id": "105", "name": "Pierette Boily", "gender": "F", "spouse_ids": ["104"], "parent_ids": null, "birth_year": null, "death_year": null },
             { "id": "106", "name": "Tracy Leah Kasner", "gender": "F", "spouse_ids": ["107", "108"], "parent_ids": ["168", "169"], "children_ids": ["21", "22"], "birth_year": null, "death_year": null },
             { "id": "107", "name": "David Greaves", "gender": "M", "spouse_id": "106", "children_ids": ["21", "22"], "birth_year": null, "death_year": null },
             { "id": "21", "name": "Nesya Ann Greaves", "gender": "F", "parent_ids": ["106", "107"], "birth_year": null, "death_year": null },
             { "id": "22", "name": "Aaron Kasner Greaves", "gender": "M", "parent_ids": ["106", "107"], "birth_year": null, "death_year": null },
-            { "id": "108", "name": "Sean Shore", "gender": "M", "spouse_ids": "106", "children_ids": null, "birth_year": null, "death_year": null },
+            <!-- *** FIX 3 (ID 108) - spouse_ids converted to array for consistency. *** -->
+            { "id": "108", "name": "Sean Shore", "gender": "M", "spouse_ids": ["106"], "children_ids": null, "birth_year": null, "death_year": null },
             { "id": "171", "name": "Kenneth Ballard Kasner", "gender": "M", "spouse_ids": ["172"], "parent_ids": ["204", "205"], "children_ids": ["109", "111"], "birth_year": null, "death_year": null },
             { "id": "172", "name": "Susan Kay Ishmael-Royer", "gender": "F", "spouse_id": "171", "children_ids": ["109", "111"], "birth_year": null, "death_year": null },
             { "id": "109", "name": "Kristofor A Kasner", "gender": "M", "parent_ids": ["171", "172"], "birth_year": null, "death_year": null },
@@ -292,7 +294,7 @@
             { "id": "219", "name": "Hymie Myers", "gender": "M", "spouse_id": "218", "children_ids": ["189", "192"], "birth_year": null, "death_year": null },
             { "id": "220", "name": "Moshe Yosef Bromberg", "gender": "M", "spouse_ids": ["221"], "parent_ids": ["229", "230"], "children_ids": ["194", "196", "198"], "birth_year": null, "death_year": null },
             { "id": "221", "name": "Rachel Witta Weinberger", "gender": "F", "spouse_id": "220", "children_ids": ["194", "196", "198"], "birth_year": null, "death_year": null },
-            { "id": "189", "name": "Martin Myers", "gender": "M", "spouse_ids": ["190", "191"], "parent_ids": ["218", "219"], "children_ids": ["132", "34", "133"], "birth_year": null, "death_year": null },
+            { "id": "189", "name": "Martin Myers", "gender": "M", "spouse_ids": ["190", "191"], "parent_ids": ["218", "219"], "children_ids": ["132", "133"], "birth_year": null, "death_year": null },
             { "id": "190", "name": "Nancy Myers", "gender": "F", "spouse_id": "189", "children_ids": ["132", "34", "133"], "birth_year": null, "death_year": null },
             { "id": "191", "name": "Patty Myers", "gender": "F", "spouse_id": "189", "children_ids": [], "birth_year": null, "death_year": null, "note": "Second spouse of Martin (189)"},
             { "id": "192", "name": "Karen Myers", "gender": "F", "spouse_ids": ["193"], "parent_ids": ["218", "219"], "children_ids": ["136"], "birth_year": null, "death_year": null },
