--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -302,11 +302,11 @@
             { "id": "132", "name": "Carla Myers", "gender": "F", "parent_ids": ["189", "190"], "birth_year": null, "death_year": null },
             { "id": "34", "name": "Peter Myers", "gender": "M", "parent_ids": ["132"], "birth_year": null, "death_year": null },
             // Note: The structure for 133/135/35/36 implies 135 is spouse of 35, not 133. Maintaining original structure.
-            { "id": "133", "name": "Rebecca Myers", "gender": "F", "spouse_ids": ["134"], "parent_ids": ["189", "190"], "children_ids": ["35", "36"], "birth_year": null, "death_year": null, "note": "Data structure uses a single spouse for visualization" },
+            { "id": "133", "name": "Rebecca Myers", "gender": "F", "spouse_ids": ["134","135"], "parent_ids": ["189", "190"], "children_ids": ["35", "36"], "birth_year": null, "death_year": null },
             { "id": "134", "name": "Scott Labby", "gender": "M", "spouse_id": "133", "children_ids": ["35"], "birth_year": null, "death_year": null },
             { "id": "35", "name": "Maren Labby", "gender": "F", "spouse_ids": ["135"], "parent_ids": ["133", "134"], "children_ids": ["36"], "birth_year": null, "death_year": null },
-            { "id": "135", "name": "Seth Frader-Thompson", "gender": "M", "spouse_id": "35", "children_ids": ["36"], "birth_year": null, "death_year": null },
-            { "id": "36", "name": "Sam Frader-Thompson", "gender": "M", "parent_ids": ["35", "135"], "birth_year": null, "death_year": null },
+            { "id": "135", "name": "Seth Frader-Thompson", "gender": "M", "spouse_id": "133", "children_ids": ["36"], "birth_year": null, "death_year": null },
+            { "id": "36", "name": "Sam Frader-Thompson", "gender": "M", "parent_ids": ["133", "135"], "birth_year": null, "death_year": null },
             { "id": "136", "name": "Aaron Yukich", "gender": "M", "parent_ids": ["192", "193"], "birth_year": null, "death_year": null },
             { "id": "194", "name": "Rivka Bromberg", "gender": "F", "spouse_ids": ["195"], "parent_ids": ["220", "221"], "children_ids": ["138", "139", "141"], "birth_year": null, "death_year": null },
             { "id": "195", "name": "Nissim Pilosof", "gender": "M", "spouse_id": "194", "children_ids": ["138", "139", "141"], "birth_year": null, "death_year": null },
