--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -304,7 +304,7 @@
             // Note: The structure for 133/135/35/36 implies 135 is spouse of 35, not 133. Maintaining original structure.
             { "id": "133", "name": "Rebecca Myers", "gender": "F", "spouse_ids": ["134","135"], "parent_ids": ["189", "190"], "children_ids": ["35", "36"], "birth_year": null, "death_year": null },
             { "id": "134", "name": "Scott Labby", "gender": "M", "spouse_id": "133", "children_ids": ["35"], "birth_year": null, "death_year": null },
-            { "id": "35", "name": "Maren Labby", "gender": "F", "spouse_ids": ["135"], "parent_ids": ["133", "134"], "children_ids": ["36"], "birth_year": null, "death_year": null },
+            { "id": "35", "name": "Maren Labby", "gender": "F", "spouse_ids": null, "parent_ids": ["133", "134"], "children_ids": null, "birth_year": null, "death_year": null },
             { "id": "135", "name": "Seth Frader-Thompson", "gender": "M", "spouse_id": "133", "children_ids": ["36"], "birth_year": null, "death_year": null },
             { "id": "36", "name": "Sam Frader-Thompson", "gender": "M", "parent_ids": ["133", "135"], "birth_year": null, "death_year": null },
             { "id": "136", "name": "Aaron Yukich", "gender": "M", "parent_ids": ["192", "193"], "birth_year": null, "death_year": null },
