--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -299,7 +299,7 @@
             { "id": "191", "name": "Patty Myers", "gender": "F", "spouse_id": "189", "children_ids": [], "birth_year": null, "death_year": null, "note": "Second spouse of Martin (189)"},
             { "id": "192", "name": "Karen Myers", "gender": "F", "spouse_ids": ["193"], "parent_ids": ["218", "219"], "children_ids": ["136"], "birth_year": null, "death_year": null },
             { "id": "193", "name": "Bob Yukich", "gender": "M", "spouse_id": "192", "children_ids": ["136"], "birth_year": null, "death_year": null },
-            { "id": "132", "name": "Carla Myers", "gender": "F", "parent_ids": ["189", "190"], "birth_year": null, "death_year": null },
+            { "id": "132", "name": "Carla Myers", "gender": "F","spouse_ids": null, "parent_ids": ["189", "190"],"children_ids": ["34"], "birth_year": null, "death_year": null },
             { "id": "34", "name": "Peter Myers", "gender": "M", "parent_ids": ["132"], "birth_year": null, "death_year": null },
             // Note: The structure for 133/135/35/36 implies 135 is spouse of 35, not 133. Maintaining original structure.
             { "id": "133", "name": "Rebecca Myers", "gender": "F", "spouse_ids": ["134","135"], "parent_ids": ["189", "190"], "children_ids": ["35", "36"], "birth_year": null, "death_year": null },
