--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -270,7 +270,7 @@
             { "id": "25", "name": "Spencer Jacob Browne", "gender": "M", "parent_ids": ["119", "120"], "birth_year": null, "death_year": null },
             { "id": "26", "name": "Kendall Browne", "gender": "F", "parent_ids": ["119", "120"], "birth_year": null, "death_year": null },
             { "id": "122", "name": "Glenn Goldman", "gender": "M", "spouse_ids": ["123"], "parent_ids": ["182", "183"], "children_ids": ["27", "28"], "birth_year": null, "death_year": null },
-            { "id": "123", "name": "Beryl Tsang", "gender": "F", "spouse_id": "122", "children_ids": ["27", "28"], "birth_year": null, "death_year": null },
+            { "id": "123", "name": "Unknown", "gender": "F", "spouse_id": "122", "children_ids": ["27", "28"], "birth_year": null, "death_year": null },
             { "id": "124", "name": "Carolynn Goldman", "gender": "F", "parent_ids": ["182", "183"], "birth_year": null, "death_year": null },
             { "id": "126", "name": "Paul Goldman", "gender": "M", "spouse_ids": ["127"], "parent_ids": ["182", "183"], "children_ids": ["29", "30"], "birth_year": null, "death_year": null },
             { "id": "127", "name": "Martha Elizabeth Papsin", "gender": "F", "spouse_id": "126", "children_ids": ["29", "30"], "birth_year": null, "death_year": null },
@@ -356,7 +356,7 @@
             { "id": "68", "name": "Arie Ben Moshe", "gender": "M", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
             { "id": "69", "name": "Tamar Ben Moshe", "gender": "F", "parent_ids": ["149", "150"], "birth_year": null, "death_year": null },
             { "id": "152", "name": "Noga Bromberg", "gender": "F", "spouse_ids": ["153"], "parent_ids": ["198", "199"], "children_ids": ["70", "71", "72", "73", "74"], "birth_year": null, "death_year": null },
-            { "id": "153", "name": "Avi Grossman", "gender": "F", "spouse_id": "152", "children_ids": ["70", "71", "72", "73", "74"], "birth_year": null, "death_year": null },
+            { "id": "153", "name": "Avi Grossman", "gender": "M", "spouse_id": "152", "children_ids": ["70", "71", "72", "73", "74"], "birth_year": null, "death_year": null },
             { "id": "154", "name": "Merav Bromberg", "gender": "F", "spouse_ids": ["155"], "parent_ids": ["198", "199"], "children_ids": ["75", "76", "77", "78", "79", "80"], "birth_year": null, "death_year": null },
             { "id": "155", "name": "Yanai Ben Abou", "gender": "M", "spouse_id": "154", "children_ids": ["75", "76", "77", "78", "79", "80"], "birth_year": null, "death_year": null },
             { "id": "156", "name": "Amitai Bromberg", "gender": "M", "spouse_ids": ["157"], "parent_ids": ["198", "199"], "children_ids": ["79","80","81"], "birth_year": null, "death_year": null },
