--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -187,8 +187,10 @@
             { "id": "159", "name": "Barbara Ione Chesen", "gender": "F", "spouse_id": "158", "children_ids": ["82", "84", "86", "89"], "birth_year": null, "death_year": null },
             { "id": "162", "name": "Bernard Harold Zeavin", "gender": "M", "spouse_ids": ["163"], "parent_ids": ["200", "201"], "children_ids": ["91"], "birth_year": "Nov 3, 1926", "death_year": "Oct 25, 2022" },
             { "id": "163", "name": "Naomi Dolores Sokol", "gender": "F", "spouse_id": "162", "children_ids": ["91"], "birth_year": "Mar 12, 1933", "death_year": null },
-            { "id": "164", "name": "Beverly Anne Zeavin", "gender": "F", "spouse_ids": ["165"], "parent_ids": ["200", "201"], "children_ids": ["100", "102"], "birth_year": "Jul 5, 1938", "death_year": "Alive" },
-            { "id": "165", "name": "William Pitt Riley", "gender": "M", "spouse_id": "164", "children_ids": ["100", "102"], "birth_year": null, "death_year": null },
+            { "id": "164", "name": "Beverly Anne Zeavin", "gender": "F", "spouse_ids": ["165","166"], "parent_ids": ["200", "201"], "children_ids": ["100", "102"], "birth_year": "Jul 5, 1938", "death_year": "Alive" },
+            { "id": "165", "name": "William Pitt Riley", "gender": "M", "spouse_id": "164", "children_ids": ["100", "102"], "birth_year": "1933", "death_year": "Jan 1998" },
+            { "id": "166", "name": "D'Arcy Charles Henry McCaffrey", "gender": "M", "spouse_id": "164", "children_ids": null, "birth_year": "Feb 2, 1936", "death_year": null },
+            { "id": "167", "name": "Jack McJannet", "gender": "M", "spouse_id": "164", "children_ids": null, "birth_year": null, "death_year": null },
             { "id": "82", "name": "Robert Alan Zeavin", "gender": "M", "spouse_ids": ["83"], "parent_ids": ["158", "159"], "children_ids": ["7", "8"], "birth_year": null, "death_year": null },
             { "id": "83", "name": "Yadira Vidal", "gender": "F", "spouse_id": "82", "children_ids": ["7", "8"], "birth_year": null, "death_year": null },
             { "id": "84", "name": "Michael Jeffrey Zeavin", "gender": "M", "parent_ids": ["158", "159"], "birth_year": null, "death_year": null },
