--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -185,7 +185,7 @@
             { "id": "209", "name": "Max Kaplan", "gender": "M", "spouse_id": "208", "children_ids": ["176", "178"], "birth_year": null, "death_year": null },
             { "id": "158", "name": "Irvin I Zeavin", "gender": "M", "spouse_ids": ["159"], "parent_ids": ["200", "201"], "children_ids": ["82", "84", "86", "89"], "birth_year": "Jul 22, 1924", "death_year": "Dec 1, 1992" },
             { "id": "159", "name": "Barbara Ione Chesen", "gender": "F", "spouse_id": "158", "children_ids": ["82", "84", "86", "89"], "birth_year": null, "death_year": null },
-            { "id": "162", "name": "Bernard Harold Zeavin", "gender": "M", "spouse_ids": ["163"], "parent_ids": ["200", "201"], "children_ids": ["91"], "birth_year": "Nov 3, 1926", "death_year": "Oct 25, 2022" },
+            { "id": "162", "name": "Bernard Harold Zeavin", "gender": "M", "spouse_ids": ["163"], "parent_ids": ["200", "201"], "children_ids": ["91","94","95","98"], "birth_year": "Nov 3, 1926", "death_year": "Oct 25, 2022" },
             { "id": "163", "name": "Naomi Dolores Sokol", "gender": "F", "spouse_id": "162", "children_ids": ["91"], "birth_year": "Mar 12, 1933", "death_year": null },
             { "id": "164", "name": "Beverly Anne Zeavin", "gender": "F", "spouse_ids": ["165","166","167"], "parent_ids": ["200", "201"], "children_ids": ["100", "102"], "birth_year": "Jul 5, 1938", "death_year": "Alive" },
             { "id": "165", "name": "William Pitt Riley", "gender": "M", "spouse_id": "164", "children_ids": ["100", "102"], "birth_year": "1933", "death_year": "Jan 1998" },
@@ -198,8 +198,8 @@
             { "id": "87", "name": "Charles John Musser", "gender": "M", "spouse_id": "86", "children_ids": ["9"], "birth_year": null, "death_year": null },
             { "id": "89", "name": "Andrew R Zeavin", "gender": "M", "spouse_ids": ["90"], "parent_ids": ["158", "159"], "children_ids": ["11"], "birth_year": null, "death_year": null },
             { "id": "90", "name": "Jennifer Danielle Parton", "gender": "F", "spouse_id": "89", "children_ids": ["11"], "birth_year": null, "death_year": null },
-            { "id": "91", "name": "Gerald L MD Zeavin", "gender": "M", "spouse_ids": ["92"], "parent_ids": ["162", "163"], "children_ids": ["12", "14", "94", "95", "98"], "birth_year": null, "death_year": null },
-            { "id": "92", "name": "Rebecca Delano", "gender": "F", "spouse_id": "91", "children_ids": ["12", "14", "94", "95", "98"], "birth_year": null, "death_year": null },
+            { "id": "91", "name": "Gerald L MD Zeavin", "gender": "M", "spouse_ids": ["92"], "parent_ids": ["162", "163"], "children_ids": ["12", "14"], "birth_year": null, "death_year": null },
+            { "id": "92", "name": "Rebecca Delano", "gender": "F", "spouse_id": "91", "children_ids": ["12", "14"], "birth_year": null, "death_year": null },
             { "id": "100", "name": "Susan Lauren Riley", "gender": "F", "spouse_ids": ["101"], "parent_ids": ["164", "165"], "children_ids": ["18", "19"], "birth_year": null, "death_year": null },
             { "id": "101", "name": "David Isaac Thompson", "gender": "M", "spouse_id": "100", "children_ids": ["18", "19"], "birth_year": null, "death_year": null },
             { "id": "102", "name": "Jill Alexandra Riley", "gender": "F", "spouse_ids": ["103"], "parent_ids": ["164", "165"], "children_ids": ["20"], "birth_year": null, "death_year": null },
