--- a/public/trees/Bromberg.html
+++ b/public/trees/Bromberg.html
@@ -183,9 +183,10 @@
             { "id": "207", "name": "Sidney Freedman", "gender": "M", "spouse_id": "206", "children_ids": ["174"], "birth_year": null, "death_year": null },
             { "id": "208", "name": "Rose Kasner", "gender": "F", "spouse_ids": ["209"], "parent_ids": ["225", "226"], "children_ids": ["176", "178"], "birth_year": null, "death_year": null },
             { "id": "209", "name": "Max Kaplan", "gender": "M", "spouse_id": "208", "children_ids": ["176", "178"], "birth_year": null, "death_year": null },
-            { "id": "158", "name": "Irvin I Zeavin", "gender": "M", "spouse_ids": ["159","173"], "parent_ids": ["200", "201"], "children_ids": ["82", "84", "86", "89"], "birth_year": "Jul 22, 1924", "death_year": "Dec 1, 1992" },
+            { "id": "158", "name": "Irvin I Zeavin", "gender": "M", "spouse_ids": ["159","173","233"], "parent_ids": ["200", "201"], "children_ids": ["82", "84", "86", "89"], "birth_year": "Jul 22, 1924", "death_year": "Dec 1, 1992" },
             { "id": "159", "name": "Barbara Ione Chesen", "gender": "F", "spouse_id": "158", "children_ids": ["82", "84", "86", "89"], "birth_year": null, "death_year": null },
             { "id": "173", "name": "Marian Robin Michener", "gender": "F", "spouse_id": "158", "children_ids":null , "birth_year": null, "death_year": null },
+            { "id": "233", "name": "Barbara Anne France", "gender": "F", "spouse_id": "158", "children_ids":null , "birth_year": null, "death_year": null },
             { "id": "162", "name": "Bernard Harold Zeavin", "gender": "M", "spouse_ids": ["163"], "parent_ids": ["200", "201"], "children_ids": ["91","94","95","98"], "birth_year": "Nov 3, 1926", "death_year": "Oct 25, 2022" },
             { "id": "163", "name": "Naomi Dolores Sokol", "gender": "F", "spouse_id": "162", "children_ids": ["91"], "birth_year": "Mar 12, 1933", "death_year": null },
             { "id": "164", "name": "Beverly Anne Zeavin", "gender": "F", "spouse_ids": ["165","166","167"], "parent_ids": ["200", "201"], "children_ids": ["100", "102"], "birth_year": "Jul 5, 1938", "death_year": "Alive" },
